src/App.css
.App {
  display: flex;
  flex-direction: row;
  overflow-y: auto;
}

.container {
  height: 100vh;
  overflow-y: scroll;
}

.main-profile-container {
  z-index: 0;
}


@media (max-width: 768px) {
  /* .App > div {
    margin-left: 0px;
  } */

  .App {
    flex-direction: column;
  }

  .profile-container {
    margin-left: 0px;
  }
}

